terraform/deployments/cluster-services/modules/gatekeeper/resources/constraint_templates/validate_jobrequestreviews.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: validatejobrequestreview
  annotations:
    metadata.gatekeeper.sh/title: Validate a JobRequestReview targets a valid JobRequest
    description: This constraint ensures a JobRequestReview targets an existing, unreviewed JobRequest in the same namespace
spec:
  crd:
    spec:
      names:
        kind: validatejobrequestreview

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package validatejobrequestreview

        violation[{"msg": msg}] {
          input.review.kind.kind == "JobRequestReview"

          # jobRequestName is a required field, so defensive lookup not needed
          job_request_name := input.review.object.spec.jobRequestName
          job_request_review_namespace := input.review.namespace

          job_request := object.get(
            data.inventory,
            ["namespace", job_request_review_namespace, "platform.publishing.service.gov.uk/v1", "JobRequest", job_request_name],
            {}
          )
          job_request == {}

          msg := sprintf(
            "The JobRequestReview references JobRequest (%s) but that JobRequest cannot be found in the namespace of the JobRequestReview (%s)",
            [job_request_name, job_request_review_namespace]
          )
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "JobRequestReview"

          # jobRequestName is a required field, so defensive lookup not needed
          job_request_name := input.review.object.spec.jobRequestName
          namespace := input.review.namespace

          job_request := data.inventory.namespace[namespace]["platform.publishing.service.gov.uk/v1"]["JobRequest"][job_request_name]
          review_name := object.get(job_request, ["status", "reviewName"], "")
          review_name != ""

          msg := sprintf(
            "JobRequest (%s) has already been reviewed by JobRequestReview (%s) and is now in state (%s)",
            [job_request_name, job_request.status.reviewName, job_request.status.state]
          )
        }
