terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/block_default_namespace.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockDefaultNamespace
metadata:
  name: block-default-namespace
spec:
  match:
    scope: Namespaced
    namespaces: ["default"]
