terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/block_ingresses.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: k8sblockingresses
metadata:
  name: k8sblockingresses
spec:
  match:
    kinds:
      - kinds: ["Ingress"]
        apiGroups: ["extensions", "networking.k8s.io"]
