terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/jobrequestoperator_requiredannotations.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: JobRequestOperatorRequiredAnnotations
metadata:
  name: jobrequest-operator-required-annotations
spec:
  match:
    kinds:
      - apiGroups: ["platform.publishing.service.gov.uk"]
        kinds:
          - "JobRequest"
          - "JobRequestReview"
