terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/validate_jobrequestreviews.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: validatejobrequestreview
metadata:
  name: validatejobrequestreview
spec:
  match:
    kinds:
      - apiGroups: ["platform.publishing.service.gov.uk"]
        kinds: ["JobRequestReview"]
