terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/block_default_namespace/allow_update_in_default_namespace/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    version: v1
    kind: ConfigMap
  operation: "UPDATE"
  name: existing-config
  namespace: default
  object:
    apiVersion: v1
    kind: ConfigMap
    metadata:
      name: existing-config
      namespace: default
    data:
      example: "updated"
  oldObject:
    apiVersion: v1
    kind: ConfigMap
    metadata:
      name: existing-config
      namespace: default
    data:
      example: "original"
