terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/block_default_namespace/deny_create_in_default_namespace/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    version: v1
    kind: ConfigMap
  operation: "CREATE"
  name: accidental-config
  namespace: default
  object:
    apiVersion: v1
    kind: ConfigMap
    metadata:
      name: accidental-config
      namespace: default
    data:
      example: "value"
