terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/deny_default_namespace/default_namespace.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: example
  namespace: default
data:
  example: value
