terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ingress_valid_classname/deny_classname/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress
  operation: "CREATE"
  name: ing-invalid
  namespace: default-0
  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-invalid
      namespace: default-0
    spec:
      ingressClassName: bad-classname
      rules:
      - host: ing-0.example.com
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
