terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/internal_ingress_class_domain/allow_internal_non_prod_domain/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress

  operation: "CREATE"

  name: ing-0

  namespace: default-0

  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-0
      namespace: default-0
    spec:
      ingressClassName: "internal-non-prod"
      rules:
      - host: ing-1.internal-non-prod.cloud-platform.service.justice.gov.uk
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
