terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/jobrequestoperator_requiredannotations/allow_jobrequest_with_correct_annotation/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequest
metadata:
  name: test-jr-with-annotation
  annotations:
    platform.publishing.service.gov.uk/requested-by: arn:aws:sts::123456789:assumed-role/user.name-platformengineer/environment-platformengineer
spec:
  containerFrom:
    podSpecFrom:
      group: apps/v1
      kind: Deployment
      name: govuk-replatform-test-app
    containerName: app
  command: rake
  args: ["hello"]
