terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/jobrequestoperator_requiredannotations/allow_jobrequestreview_with_correct_annotation/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequestReview
metadata:
  name: test-jrr-with-annotation
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/reviewed-by: arn:aws:sts::123456789:assumed-role/otheruser.name-platformengineer/test-platformengineer
spec:
  jobRequestName: test-jobrequest-unreviewed
  decision: Approved
  description: "LGTM"
