terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/jobrequestoperator_requiredannotations/deny_jobrequest_without_correct_annotation/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequest
metadata:
  name: test-jr-no-annotation
spec:
  containerFrom:
    podSpecFrom:
      group: apps/v1
      kind: Deployment
      name: govuk-replatform-test-app
    containerName: app
  command: rake
  args: ["hello"]
