terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/jobrequestoperator_requiredannotations/deny_jobrequestreview_with_correct_annotation_set_to_empty_string/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequestReview
metadata:
  name: test-jrr-empty-annotation
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/reviewed-by: ""
spec:
  jobRequestName: test-jobrequest-unreviewed
  decision: Approved
  description: "LGTM"
