terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/jobrequestoperator_requiredannotations/deny_jobrequestreview_without_correct_annotation/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequestReview
metadata:
  name: test-jrr-no-annotation
  namespace: apps
spec:
  jobRequestName: test-jobrequest-unreviewed
  decision: Approved
  description: "LGTM"
