terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/ns_requires_psa_label/deny_missing_label/case.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: allowed-namespace
