terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/validate_jobrequestreviews/allow_reviewing_unreviewed_jobrequest/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequestReview
metadata:
  name: test-jobrequestreview-unreviewed
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/reviewed-by: arn:aws:sts::123456789:assumed-role/otheruser.name-platformengineer/test-platformengineer
spec:
  jobRequestName: test-jobrequest-unreviewed
  decision: Approved
  description: "LGTM"
