terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/validate_jobrequestreviews/allow_reviewing_unreviewed_jobrequest/inventory.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequest
metadata:
  name: test-jobrequest-unreviewed
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/requested-by: arn:aws:sts::123456789012:assumed-role/jonathan.harden-platformengineer/test-platformengineer
spec:
  containerFrom:
    podSpecFrom:
      group: apps/v1
      kind: Deployment
      name: govuk-replatform-test-app
    containerName: app
  command: rake
  args: ["hello"]
