terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/validate_jobrequestreviews/deny_reviewing_already_reviewed_jobrequest/case.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequestReview
metadata:
  name: test-jobrequestreview-reviewed
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/reviewed-by: arn:aws:sts::123456789:assumed-role/otheruser.name-platformengineer/test-platformengineer
spec:
  jobRequestName: test-jobrequest-reviewed
  decision: Approved
  description: "LGTM"
