terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/validate_jobrequestreviews/deny_reviewing_already_reviewed_jobrequest/inventory.yaml
---
apiVersion: platform.publishing.service.gov.uk/v1
kind: JobRequest
metadata:
  name: test-jobrequest-reviewed
  namespace: apps
  annotations:
    platform.publishing.service.gov.uk/requested-by: arn:aws:sts::123456789012:assumed-role/jonathan.harden-platformengineer/test-platformengineer
spec:
  containerFrom:
    podSpecFrom:
      group: apps/v1
      kind: Deployment
      name: govuk-replatform-test-app
    containerName: app
  command: rake
  args: ["hello"]
status:
  state: "Started"
  reviewName: previous-jobrequestreview
